--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
         <link rel="stylesheet" href="css/qgis2web.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/MarkerCluster.css">
-        <link rel="stylesheet" href="css/MarkerCluster.Default.css">
         <link rel="stylesheet" href="css/leaflet.photon.css">
         <style>
         html, body, #map {
@@ -39,9 +37,7 @@
         <script src="js/leaflet.photon.js"></script>
         <script src="js/proj4.js"></script>
         <script src="js/proj4leaflet.js"></script>
-        <script src="js/leaflet.markercluster.js"></script>
-        <script src="data/NaturerlebnisseErgnzung1_1.js"></script>
-        <script src="data/NaturerlebnisseBilder_2.js"></script>
+        <script src="data/NaturerlebnisseErgnzung1_0.js"></script>
         <script>
         var crs = new L.Proj.CRS('EPSG:31256', '+proj=tmerc +lat_0=0 +lon_0=16.3333333333333 +k=1 +x_0=0 +y_0=-5000000 +ellps=bessel +towgs84=577.326,90.129,463.919,5.137,1.474,5.297,2.4232 +units=m +no_defs', {
             resolutions: [2800, 1400, 700, 350, 175, 84, 42, 21, 11.2, 5.6, 2.8, 1.4, 0.7, 0.35, 0.14, 0.07],
@@ -51,7 +47,7 @@
             continuousWorld: false,
             worldCopyJump: false, 
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[46.466501243645716,10.976188497803793],[49.014712731718426,18.000635363635592]]);
+        }).fitBounds([[45.8302732300786,10.273494803890985],[48.41128774012395,17.209201122227572]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -89,20 +85,7 @@
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        map.createPane('pane_OpenStreetMap_0');
-        map.getPane('pane_OpenStreetMap_0').style.zIndex = 400;
-        var layer_OpenStreetMap_0 = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            pane: 'pane_OpenStreetMap_0',
-            opacity: 1.0,
-            attribution: '',
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 19
-        });
-        layer_OpenStreetMap_0;
-        map.addLayer(layer_OpenStreetMap_0);
-        function pop_NaturerlebnisseErgnzung1_1(feature, layer) {
+        function pop_NaturerlebnisseErgnzung1_0(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
@@ -139,9 +122,9 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_NaturerlebnisseErgnzung1_1_0() {
+        function style_NaturerlebnisseErgnzung1_0_0() {
             return {
-                pane: 'pane_NaturerlebnisseErgnzung1_1',
+                pane: 'pane_NaturerlebnisseErgnzung1_0',
                 radius: 5.0,
                 opacity: 1,
                 color: 'rgba(61,128,53,1.0)',
@@ -155,103 +138,28 @@
                 interactive: true,
             }
         }
-        map.createPane('pane_NaturerlebnisseErgnzung1_1');
-        map.getPane('pane_NaturerlebnisseErgnzung1_1').style.zIndex = 401;
-        map.getPane('pane_NaturerlebnisseErgnzung1_1').style['mix-blend-mode'] = 'normal';
-        var layer_NaturerlebnisseErgnzung1_1 = new L.geoJson(json_NaturerlebnisseErgnzung1_1, {
+        map.createPane('pane_NaturerlebnisseErgnzung1_0');
+        map.getPane('pane_NaturerlebnisseErgnzung1_0').style.zIndex = 400;
+        map.getPane('pane_NaturerlebnisseErgnzung1_0').style['mix-blend-mode'] = 'normal';
+        var layer_NaturerlebnisseErgnzung1_0 = new L.geoJson(json_NaturerlebnisseErgnzung1_0, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_NaturerlebnisseErgnzung1_1',
-            layerName: 'layer_NaturerlebnisseErgnzung1_1',
-            pane: 'pane_NaturerlebnisseErgnzung1_1',
-            onEachFeature: pop_NaturerlebnisseErgnzung1_1,
+            dataVar: 'json_NaturerlebnisseErgnzung1_0',
+            layerName: 'layer_NaturerlebnisseErgnzung1_0',
+            pane: 'pane_NaturerlebnisseErgnzung1_0',
+            onEachFeature: pop_NaturerlebnisseErgnzung1_0,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_NaturerlebnisseErgnzung1_1_0(feature));
+                return L.circleMarker(latlng, style_NaturerlebnisseErgnzung1_0_0(feature));
             },
         });
-        bounds_group.addLayer(layer_NaturerlebnisseErgnzung1_1);
-        function pop_NaturerlebnisseBilder_2(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2"><strong>Name</strong><br />' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['descriptio'] !== null ? autolinker.link(String(feature.properties['descriptio']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Bild'] !== null ? autolinker.link(String(feature.properties['Bild']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Kategorie'] !== null ? autolinker.link(String(feature.properties['Kategorie']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['feeling'] !== null ? autolinker.link(String(feature.properties['feeling']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['BewGoog'] !== null ? autolinker.link(String(feature.properties['BewGoog']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Beschreibu'] !== null ? autolinker.link(String(feature.properties['Beschreibu']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Bedeutung'] !== null ? autolinker.link(String(feature.properties['Bedeutung']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['gesehen_j_'] !== null ? autolinker.link(String(feature.properties['gesehen_j_']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
-			layer.on('popupopen', function(e) {
-				addClassToPopupIfMedia(content, e.popup);
-			});
-			layer.bindPopup(content, { maxHeight: 400 });
-        }
-
-        function style_NaturerlebnisseBilder_2_0() {
-            return {
-                pane: 'pane_NaturerlebnisseBilder_2',
-        rotationAngle: 0.0,
-        rotationOrigin: 'center center',
-        icon: L.icon({
-            iconUrl: 'markers/NaturerlebnisseBilder_2.svg',
-            iconSize: [19.0, 19.0]
-        }),
-                interactive: true,
-            }
-        }
-        map.createPane('pane_NaturerlebnisseBilder_2');
-        map.getPane('pane_NaturerlebnisseBilder_2').style.zIndex = 402;
-        map.getPane('pane_NaturerlebnisseBilder_2').style['mix-blend-mode'] = 'normal';
-        var layer_NaturerlebnisseBilder_2 = new L.geoJson(json_NaturerlebnisseBilder_2, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_NaturerlebnisseBilder_2',
-            layerName: 'layer_NaturerlebnisseBilder_2',
-            pane: 'pane_NaturerlebnisseBilder_2',
-            onEachFeature: pop_NaturerlebnisseBilder_2,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.marker(latlng, style_NaturerlebnisseBilder_2_0(feature));
-            },
-        });
-        var cluster_NaturerlebnisseBilder_2 = new L.MarkerClusterGroup({showCoverageOnHover: false,
-            spiderfyDistanceMultiplier: 2});
-        cluster_NaturerlebnisseBilder_2.addLayer(layer_NaturerlebnisseBilder_2);
-
-        bounds_group.addLayer(layer_NaturerlebnisseBilder_2);
-        cluster_NaturerlebnisseBilder_2.addTo(map);
+        bounds_group.addLayer(layer_NaturerlebnisseErgnzung1_0);
         var overlaysTree = [
         {label: '<b>ÖSTERREICH</b>', collapsed: true, selectAllCheckbox: true, children: [
-            {label: '<img src="legend/NaturerlebnisseBilder_2.png" /> Naturerlebnisse Bilder', layer: cluster_NaturerlebnisseBilder_2},
-            {label: '<img src="legend/NaturerlebnisseErgnzung1_1.png" /> Naturerlebnisse Ergänzung1', layer: layer_NaturerlebnisseErgnzung1_1},]},
-            {label: "OpenStreetMap", layer: layer_OpenStreetMap_0},]
+            {label: '<img src="legend/NaturerlebnisseErgnzung1_0.png" /> Naturerlebnisse Ergänzung1', layer: layer_NaturerlebnisseErgnzung1_0},]},]
         var lay = L.control.layers.tree(null, overlaysTree,{
             //namedToggle: true,
             //selectorBack: false,
@@ -314,40 +222,27 @@
         });       
         setBounds();
         var i = 0;
-        layer_NaturerlebnisseErgnzung1_1.eachLayer(function(layer) {
+        layer_NaturerlebnisseErgnzung1_0.eachLayer(function(layer) {
             var context = {
                 feature: layer.feature,
                 variables: {}
             };
-            layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #000000; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_NaturerlebnisseErgnzung1_1'});
+            layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #000000; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_NaturerlebnisseErgnzung1_0'});
             labels.push(layer);
             totalMarkers += 1;
               layer.added = true;
               addLabel(layer, i);
               i++;
         });
-        var i = 0;
-        layer_NaturerlebnisseBilder_2.eachLayer(function(layer) {
-            var context = {
-                feature: layer.feature,
-                variables: {}
-            };
-            layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #1130ee; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_NaturerlebnisseBilder_2'});
-            labels.push(layer);
-            totalMarkers += 1;
-              layer.added = true;
-              addLabel(layer, i);
-              i++;
-        });
-        resetLabels([layer_NaturerlebnisseErgnzung1_1,layer_NaturerlebnisseBilder_2]);
+        resetLabels([layer_NaturerlebnisseErgnzung1_0]);
         map.on("zoomend", function(){
-            resetLabels([layer_NaturerlebnisseErgnzung1_1,layer_NaturerlebnisseBilder_2]);
+            resetLabels([layer_NaturerlebnisseErgnzung1_0]);
         });
         map.on("layeradd", function(){
-            resetLabels([layer_NaturerlebnisseErgnzung1_1,layer_NaturerlebnisseBilder_2]);
+            resetLabels([layer_NaturerlebnisseErgnzung1_0]);
         });
         map.on("layerremove", function(){
-            resetLabels([layer_NaturerlebnisseErgnzung1_1,layer_NaturerlebnisseBilder_2]);
+            resetLabels([layer_NaturerlebnisseErgnzung1_0]);
         });
         </script>
     </body>
