--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
         <link rel="stylesheet" href="css/qgis2web.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/MarkerCluster.css">
+        <link rel="stylesheet" href="css/MarkerCluster.Default.css">
         <link rel="stylesheet" href="css/leaflet.photon.css">
         <style>
         html, body, #map {
@@ -35,19 +37,13 @@
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="js/leaflet.photon.js"></script>
-        <script src="js/proj4.js"></script>
-        <script src="js/proj4leaflet.js"></script>
-        <script src="data/NaturerlebnisseErgnzung1_0.js"></script>
+        <script src="js/leaflet.markercluster.js"></script>
+        <script src="data/NaturerlebnisseBilder_1.js"></script>
+        <script src="data/HuettenAlpen2025_2.js"></script>
         <script>
-        var crs = new L.Proj.CRS('EPSG:31256', '+proj=tmerc +lat_0=0 +lon_0=16.3333333333333 +k=1 +x_0=0 +y_0=-5000000 +ellps=bessel +towgs84=577.326,90.129,463.919,5.137,1.474,5.297,2.4232 +units=m +no_defs', {
-            resolutions: [2800, 1400, 700, 350, 175, 84, 42, 21, 11.2, 5.6, 2.8, 1.4, 0.7, 0.35, 0.14, 0.07],
-        });
         var map = L.map('map', {
-            crs: crs,
-            continuousWorld: false,
-            worldCopyJump: false, 
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[45.8302732300786,10.273494803890985],[48.41128774012395,17.209201122227572]]);
+        }).fitBounds([[45.87780566759908,8.754380375848442],[48.58485997681431,16.16549610808492]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -85,10 +81,23 @@
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        function pop_NaturerlebnisseErgnzung1_0(feature, layer) {
+        map.createPane('pane_OpenStreetMap_0');
+        map.getPane('pane_OpenStreetMap_0').style.zIndex = 400;
+        var layer_OpenStreetMap_0 = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            pane: 'pane_OpenStreetMap_0',
+            opacity: 1.0,
+            attribution: '',
+            minZoom: 1,
+            maxZoom: 28,
+            minNativeZoom: 0,
+            maxNativeZoom: 19
+        });
+        layer_OpenStreetMap_0;
+        map.addLayer(layer_OpenStreetMap_0);
+        function pop_NaturerlebnisseBilder_1(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Name</strong><br />' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['descriptio'] !== null ? autolinker.link(String(feature.properties['descriptio']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
@@ -122,44 +131,120 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_NaturerlebnisseErgnzung1_0_0() {
+        function style_NaturerlebnisseBilder_1_0() {
             return {
-                pane: 'pane_NaturerlebnisseErgnzung1_0',
-                radius: 5.0,
-                opacity: 1,
-                color: 'rgba(61,128,53,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(84,176,74,1.0)',
+                pane: 'pane_NaturerlebnisseBilder_1',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/NaturerlebnisseBilder_1.svg',
+            iconSize: [19.0, 19.0]
+        }),
                 interactive: true,
             }
         }
-        map.createPane('pane_NaturerlebnisseErgnzung1_0');
-        map.getPane('pane_NaturerlebnisseErgnzung1_0').style.zIndex = 400;
-        map.getPane('pane_NaturerlebnisseErgnzung1_0').style['mix-blend-mode'] = 'normal';
-        var layer_NaturerlebnisseErgnzung1_0 = new L.geoJson(json_NaturerlebnisseErgnzung1_0, {
+        map.createPane('pane_NaturerlebnisseBilder_1');
+        map.getPane('pane_NaturerlebnisseBilder_1').style.zIndex = 401;
+        map.getPane('pane_NaturerlebnisseBilder_1').style['mix-blend-mode'] = 'normal';
+        var layer_NaturerlebnisseBilder_1 = new L.geoJson(json_NaturerlebnisseBilder_1, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_NaturerlebnisseErgnzung1_0',
-            layerName: 'layer_NaturerlebnisseErgnzung1_0',
-            pane: 'pane_NaturerlebnisseErgnzung1_0',
-            onEachFeature: pop_NaturerlebnisseErgnzung1_0,
+            dataVar: 'json_NaturerlebnisseBilder_1',
+            layerName: 'layer_NaturerlebnisseBilder_1',
+            pane: 'pane_NaturerlebnisseBilder_1',
+            onEachFeature: pop_NaturerlebnisseBilder_1,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_NaturerlebnisseErgnzung1_0_0(feature));
+                return L.marker(latlng, style_NaturerlebnisseBilder_1_0(feature));
             },
         });
-        bounds_group.addLayer(layer_NaturerlebnisseErgnzung1_0);
+        bounds_group.addLayer(layer_NaturerlebnisseBilder_1);
+        map.addLayer(layer_NaturerlebnisseBilder_1);
+        function pop_HuettenAlpen2025_2(feature, layer) {
+            var popupContent = '<table>\
+                    <tr>\
+                        <th scope="row">Name</th>\
+                        <td class="visible-with-data" id="Name">' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Berggruppe</th>\
+                        <td class="visible-with-data" id="Berggruppe">' + (feature.properties['Berggruppe'] !== null ? autolinker.link(String(feature.properties['Berggruppe']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Hoehe in m</th>\
+                        <td class="visible-with-data" id="Hoehe in m">' + (feature.properties['Hoehe in m'] !== null ? autolinker.link(String(feature.properties['Hoehe in m']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Telefon</th>\
+                        <td class="visible-with-data" id="Telefon">' + (feature.properties['Telefon'] !== null ? autolinker.link(String(feature.properties['Telefon']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Wintereign</th>\
+                        <td class="visible-with-data" id="Wintereign">' + (feature.properties['Wintereign'] !== null ? autolinker.link(String(feature.properties['Wintereign']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Kindereign</th>\
+                        <td class="visible-with-data" id="Kindereign">' + (feature.properties['Kindereign'] !== null ? autolinker.link(String(feature.properties['Kindereign']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Bewirtung</th>\
+                        <td class="visible-with-data" id="Bewirtung">' + (feature.properties['Bewirtung'] !== null ? autolinker.link(String(feature.properties['Bewirtung']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">link</th>\
+                        <td class="visible-with-data" id="link">' + (feature.properties['link'] !== null ? autolinker.link(String(feature.properties['link']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_HuettenAlpen2025_2_0() {
+            return {
+                pane: 'pane_HuettenAlpen2025_2',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/HuettenAlpen2025_2.svg',
+            iconSize: [15.2, 15.2]
+        }),
+                interactive: true,
+            }
+        }
+        map.createPane('pane_HuettenAlpen2025_2');
+        map.getPane('pane_HuettenAlpen2025_2').style.zIndex = 402;
+        map.getPane('pane_HuettenAlpen2025_2').style['mix-blend-mode'] = 'normal';
+        var layer_HuettenAlpen2025_2 = new L.geoJson(json_HuettenAlpen2025_2, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_HuettenAlpen2025_2',
+            layerName: 'layer_HuettenAlpen2025_2',
+            pane: 'pane_HuettenAlpen2025_2',
+            onEachFeature: pop_HuettenAlpen2025_2,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.marker(latlng, style_HuettenAlpen2025_2_0(feature));
+            },
+        });
+        var cluster_HuettenAlpen2025_2 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+            spiderfyDistanceMultiplier: 2});
+        cluster_HuettenAlpen2025_2.addLayer(layer_HuettenAlpen2025_2);
+
+        bounds_group.addLayer(layer_HuettenAlpen2025_2);
         var overlaysTree = [
-        {label: '<b>ÖSTERREICH</b>', collapsed: true, selectAllCheckbox: true, children: [
-            {label: '<img src="legend/NaturerlebnisseErgnzung1_0.png" /> Naturerlebnisse Ergänzung1', layer: layer_NaturerlebnisseErgnzung1_0},]},]
+            {label: '<img src="legend/HuettenAlpen2025_2.png" /> Huetten Alpen 2025', layer: cluster_HuettenAlpen2025_2},
+        {label: '<b>ÖSTERREICH</b>',  selectAllCheckbox: true, children: [
+            {label: '<img src="legend/NaturerlebnisseBilder_1.png" /> Naturerlebnisse Bilder', layer: layer_NaturerlebnisseBilder_1},]},
+            {label: "OpenStreetMap", layer: layer_OpenStreetMap_0, radioGroup: 'bm' },]
         var lay = L.control.layers.tree(null, overlaysTree,{
             //namedToggle: true,
             //selectorBack: false,
@@ -222,27 +307,40 @@
         });       
         setBounds();
         var i = 0;
-        layer_NaturerlebnisseErgnzung1_0.eachLayer(function(layer) {
+        layer_NaturerlebnisseBilder_1.eachLayer(function(layer) {
             var context = {
                 feature: layer.feature,
                 variables: {}
             };
-            layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #000000; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_NaturerlebnisseErgnzung1_0'});
+            layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #1130ee; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_NaturerlebnisseBilder_1'});
             labels.push(layer);
             totalMarkers += 1;
               layer.added = true;
               addLabel(layer, i);
               i++;
         });
-        resetLabels([layer_NaturerlebnisseErgnzung1_0]);
+        var i = 0;
+        layer_HuettenAlpen2025_2.eachLayer(function(layer) {
+            var context = {
+                feature: layer.feature,
+                variables: {}
+            };
+            layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #000000; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_HuettenAlpen2025_2'});
+            labels.push(layer);
+            totalMarkers += 1;
+              layer.added = true;
+              addLabel(layer, i);
+              i++;
+        });
+        resetLabels([layer_NaturerlebnisseBilder_1,layer_HuettenAlpen2025_2]);
         map.on("zoomend", function(){
-            resetLabels([layer_NaturerlebnisseErgnzung1_0]);
+            resetLabels([layer_NaturerlebnisseBilder_1,layer_HuettenAlpen2025_2]);
         });
         map.on("layeradd", function(){
-            resetLabels([layer_NaturerlebnisseErgnzung1_0]);
+            resetLabels([layer_NaturerlebnisseBilder_1,layer_HuettenAlpen2025_2]);
         });
         map.on("layerremove", function(){
-            resetLabels([layer_NaturerlebnisseErgnzung1_0]);
+            resetLabels([layer_NaturerlebnisseBilder_1,layer_HuettenAlpen2025_2]);
         });
         </script>
     </body>
